Landing Header info gap fix && # added to a tags in cards

--- a/pages/First-lading/css/style.css
+++ b/pages/First-lading/css/style.css
@@ -82,6 +82,7 @@ header ul
     flex-direction: column;
     justify-content: space-between;
     align-items:flex-start;
+    gap: 0.5rem;
 }
 
 button.sing-up{
